overflow fix

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,7 +1,7 @@
 $primary: white;
 
 * {
-  overflow: hidden;
+  overflow: auto;
   margin: 0;
   padding: 0;
   color: $primary;
